--- a/_awards/2014-07-01-vc-award.md
+++ b/_awards/2014-07-01-vc-award.md
@@ -1,7 +1,7 @@
 ---
 
-Date: Jul 2014
-Issuer: Charles Sturt University
-Title: "Vice-Chancellor’s Awards For Leadership Excellence"
+date: Jul 2014
+issuer: Charles Sturt University
+title: "Vice-Chancellor’s Awards For Leadership Excellence"
 
 ---
