Attempt to clean up and make this more "forkable"

--- a/_award/2014-07-01-vc-award.md
+++ b/_award/2014-07-01-vc-award.md
@@ -1,7 +1,7 @@
 ---
 
 date: Jul 2014
-issuer: Charles Sturt University
-title: "Vice-Chancellor’s Awards For Leadership Excellence"
+issuer: My Employer
+title: "Most Awesome Award For Excellence"
 
 ---
