--- a/_experience/2004-06-01-designer.md
+++ b/_experience/2004-06-01-designer.md
@@ -1,8 +1,8 @@
 ---
 
 period: "2004 - Dec 2005"
-employer: Sutherland Trading
-title: "Graphic Designer | Marketing"
+employer: 7th Employer
+title: "Designer"
 
 ---
 
