--- a/_experience/2004-06-01-designer.md
+++ b/_experience/2004-06-01-designer.md
@@ -6,4 +6,4 @@ title: "Designer"
 
 ---
 
-Creation of advertising and marketing material for a European music distribution company. This included developing advertisements for national and international magazines, internal sales material and the development of a single product catalogue.
+Putting birds on stuff.
